ggplot2 1.0.1.9xxx
----------------------------------------------------------------

* `scale_x_date()` now clips dates outside the limits in the same way as
  `scale_x_continuous()` (#1090)

* The `stat` and `position` arguments to `qplot()` have been deprecated.

* The movies dataset has been moved into its own package, ggplot2movies,
  because it was large and not terribly useful. If you've used the movies
  dataset, you'll now need to explicitly load the package with
  `library(ggplot2movies)`.

* The default legend will now allocate multiple rows (if vertical) or
  columns (if horizontal) in order to make a legend that is more likely to
  fit on the screen. You can override with the `nrow`/`ncol` arguments
  to `guide_legend()`

    ```R
    p <- ggplot(mpg, aes(displ,hwy, colour = model)) + geom_point()
    p
    p + theme(legend.position = "bottom")
    p + guides(colour = guide_legend(ncol = 1))
    ```

* `lims()` makes it easy to set the limits of any axis (#1138).

* Switched away from proto and reference class objects to proto2. This makes it
  easier to extend ggplot2, because proto2 supports clean cross-package
  inheritance.

* Fixed segment annotations not transforming with scales (@BrianDiggs, #859)

* `geom_point()` changes the default shape from 16 to 19 - this has a
  better display on the default linux graphics device. (It's very slightly
  smaller than the old point, but it should affect any graphics significantly)

* `theme_minimal()` got slightly more minimal by removing the axis ticks:
  labels now line up beneath the grid lines (@tomschloss, #1084)

* `ggsave()` has been simplified a little to make it easier to maintain.
  It no longer checks that you're printing a ggplot2 object (so now also
  works with any grid grob) (#970), and always requires a filename.
  Parameter `device` now supports character argument to specify which supported
  device to use ('pdf', 'png', 'jpeg', etc.), for when it cannot be correctly